--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
+   <extension-point id="nl.utwente.ce.imageexport.exportFormatProvider" name="Format Provider" schema="schema/ExportFormatProvider.exsd"/>
    <extension
          point="org.eclipse.ui.exportWizards">
       <wizard
@@ -12,6 +13,16 @@
             Export the current diagram or a part of it as an image
          </description>
       </wizard>
+   </extension>
+   <extension
+         name="Bitmap Image Exporter"
+         point="nl.utwente.ce.imageexport.exportFormatProvider">
+      <image_format
+            class="nl.utwente.ce.imageexport.export.bitmap.ExportBitmap"
+            extensions="jpg,jpeg"
+            id="Bitmap.JPEG"
+            name="JPEG Image">
+      </image_format>
    </extension>
 
 </plugin>
