Fix problem with update site (somehow things went wrong with filters, so just remove the filter stuff) and some other minor things

--- a/nl.utwente.ce.imageexport.site/.project
+++ b/nl.utwente.ce.imageexport.site/.project
@@ -3,6 +3,8 @@
 	<name>nl.utwente.ce.imageexport.site</name>
 	<comment></comment>
 	<projects>
+		<project>nl.utwente.ce.imageexport.feature</project>
+		<project>nl.utwente.ce.imageexport.svg.feature</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
