Store the selected export format in the preferences store. Use this stored perference to set the last used image format when the export wizard is used again. By default the PNG Image format is selected

--- a/nl.utwente.ce.imageexport/plugin.xml
+++ b/nl.utwente.ce.imageexport/plugin.xml
@@ -3,6 +3,12 @@
 <plugin>
    <extension-point id="nl.utwente.ce.imageexport.exportFormatProvider" name="Format Provider" schema="schema/ExportFormatProvider.exsd"/>
    <extension
+         point="org.eclipse.core.runtime.preferences">
+      <initializer
+            class="nl.utwente.ce.imageexport.core.PreferencesInitializer">
+      </initializer>
+   </extension>
+   <extension
          point="org.eclipse.ui.exportWizards">
       <wizard
             category="org.eclipse.ui.Basic"
